--- a/home/index.html
+++ b/home/index.html
@@ -4,6 +4,7 @@
     <title>Guide your future</title>
     <link rel="icon" href="C:\Users\shour\OneDrive\Desktop\Web D project\book logo.png">
     <link rel = 'stylesheet' href= 'homestyle.css'>
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
     <script src='home.js'></script>
     </head>
     <body>
@@ -26,10 +27,10 @@
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
-      <a href="#">NSUT</a>
-      <a href="#">DTU</a>
-      <a href="#">IIIT-D</a>
-      <a href="#">IGDTUW</a>
+      <a href="./nsut/nsut.html">NSUT</a>
+      <a href="./DTU/dtu.html">DTU</a>
+      <a href="./IIITD/iiitd.html">IIIT-D</a>
+      <a href="./IGDTUW/igdtuw.html">IGDTUW</a>
       <a href="#">IITs</a>
       <a href="#">NITs</a>
       <a href="#">Others..</a>
